<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="serif"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <EditText
            android:id="@+id/phNumber"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:hint="@string/phNum"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/dateOfBirth"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edit_text"
            android:ems="10"
            android:hint="@string/dateOfBirth"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phNumber" />

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.191"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateOfBirth">

            <RadioButton
                android:id="@+id/male_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genMale"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/female_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genFem"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/picUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/picUpload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_group" />

        <Spinner
            android:id="@+id/country"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/custom_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.867"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picUpload" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="44dp"
            android:text="@string/signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country" />

        <TextView
            android:id="@+id/enterCounty"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="36dp"
            android:text="@string/enterCountry"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/country"
            app:layout_constraintTop_toBottomOf="@+id/picUpload" />

        <EditText
            android:id="@+id/imageName"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="164dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/picUpload" />

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/country"
            app:layout_constraintEnd_toEndOf="@+id/country"
            app:layout_constraintStart_toStartOf="@+id/country"
            app:layout_constraintTop_toTopOf="@+id/country" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>